cluster/apps/flux-extras/github-webhook/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-webhook-receiver
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`flux-receiver.${SECRET_DOMAIN}`) && PathPrefix(`/hook`)
      kind: Rule
      # Enable auth middleware
      # middlewares:
      #   - name: rfc1918
      #   # - name: basicauth
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
